# oop-practics

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg windows GUIDE.txt  vcpkg.json
prac1/: .gitignore  README.txt  build.bat  main.c
prac2/: README.txt  build.bat
prac2/task1/: main.cpp
prac2/task10/: main.cpp
prac2/task2/: main.cpp
prac2/task3/: main.cpp
prac2/task4/: main.cpp
prac2/task5/: main.cpp
prac2/task6/: main.cpp
prac2/task7/: main.cpp
prac2/task8/: main.cpp
prac2/task9/: main.cpp
prac3/: CMakeLists.txt  main.cpp
prac4/: CMakeLists.txt  main.cpp
practice-02/task1/: main.cpp
practice-02/task10/: main.cpp
practice-02/task2/: main.cpp
practice-02/task3/: main.cpp
practice-02/task4/: main.cpp
practice-02/task5/: main.cpp
practice-02/task6/: main.cpp
practice-02/task7/: main.cpp
practice-02/task8/: main.cpp
practice-02/task9/: main.cpp
practice-05/: CMakeLists.txt  main.cpp
practice-06/task1/: CMakeLists.txt  main.cpp
practice-06/task2/: CMakeLists.txt  main.cpp
practice-07/: CMakeLists.txt  main.cpp
practice-08/: CMakeLists.txt  main.cpp
practice-08/collections/: collections.api.cppm  collections.dictionary.cppm  collections.hash-set.cppm  collections.list.cppm  collections.queue.cppm  collections.stack.cppm
practice-09/: CMakeLists.txt  fmt_printer.cpp  fmt_printer.h  main.cpp
practice-10/: CMakeLists.txt  main.cpp
